Fixed broken CSS for the footer and Important Note.

--- a/GameBox/wwwroot/css/site.css
+++ b/GameBox/wwwroot/css/site.css
@@ -11,6 +11,7 @@ header {
 footer {
     color: white;
     background: rgb(50, 0, 120);
+    position: relative !important;
 }
 
 /* Fix form-floating labels for Identity pages */
@@ -39,7 +40,7 @@ footer {
 }
 
 .text-gradient-primary {
-    background: linear-gradient(90deg, yellow, purple);
+    background: linear-gradient(90deg, yellow, rgb(178, 0, 255));
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
